--- a/ansible/roles/pkg_installation/tasks/install_pkg.yml
+++ b/ansible/roles/pkg_installation/tasks/install_pkg.yml
@@ -1,10 +1,6 @@
----
 - name: Install the software package in clound VMS
-  hosts: all
-  become: yes
-  become_user: root
-  vars:
-    MAIN: /cloud_asg
+  hosts: cloud_asg
+  sudo: yes
 
   tasks:
   - name: Update the cache
@@ -40,32 +36,4 @@
   - name: Install python webserver bottle
     pip: name=bottle state=latest
 
-# Begin sattle the analytic and display applications
-# create main directory
-  - name: create main working directory
-    file: path={{MAIN}} state=directory
-
-# deploy harvest script
-  - name: unzip tweet harvest script that coordinate with the default couchdb
-    unarchive: src={{MAIN}}/harvest.zip dest={{MAIN}}/
-
-# start harvest
-  - name: start harvest tweet in to default couchdb
-    command: sh {{MAIN}}/start.sh chdir={{MAIN}}/harvest
-
-# deploy analytic script
-  - name: unzip analytic script to main working directory
-    unarchive: src={{MAIN}}/scenario.zip dest={{MAIN}}/
-
-# execute analytic script
-  - name: Run analytic script that coordinate with default couchdb
-    command: sh {{MAIN}}/run_all.sh chdir={{MAIN}}/scenario
-    
-# deploy webserver
-  - name: unzip webserver script to main working directory
-    unarchive: src={{MAIN}}/html.zip dest={{MAIN}}
-
-# start webserver
-  - name: start webserver on localhost:80
-    command: sh {{MAIN}}/start.sh chdir={{MAIN}}/html 
 
