--- a/ansible/roles/webserver/tasks/deploy_webserver.yml
+++ b/ansible/roles/webserver/tasks/deploy_webserver.yml
@@ -1,5 +1,5 @@
 - name: Deploy webserver on remote working directory and start
-  hosts: cloud_asg
+  hosts: app
   sudo: yes
   vars:
     LOCAL_MAIN: ../../../../
